k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: search-engine
  labels:
    name: search-engine
    environment: production
